# CarBrandDetector

./: .gitignore  CMakeLists.txt  README.md
headers/: ellipses.hpp  kernels.hpp  preprocessing.hpp  shapeRecognition.hpp  sobel.hpp  utils.hpp
main/: main.cpp
src/: ellipses.cpp  main.cpp  preprocessing.cpp  shapeRecognition.cpp  sobel.cpp  utils.cpp
test/: catch.hpp  ellipsesTest.cpp  testMain.cpp
